chore: Update integrations.html with improved instructions for viewing chatbot as a webpage

--- a/templates/integrations.html
+++ b/templates/integrations.html
@@ -16,7 +16,7 @@
         <a id="view-website-btn" href="https://app.eccoai.org/{{ user_id }}/{{ chatbot_id }}" target="_blank">
             <img src="{{ url_for('static', filename='images/globe.png') }}" class="copy-img" style="cursor: pointer;"> <!-- Replace the button with an image -->
         </a>
-        <p style="color: #d3cece; margin-top: 5px;">Place this code wherever you'd like the iframe to appear on your website.</p>
+        <p style="color: #d3cece; margin-top: 5px;">Click the globe icon to view the chatbot as a webpage.</p>
     </div>
     <h2 class="instructions">Popup Chat</h2>
     <div class="code-container">
