--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -168,4 +168,70 @@
         <script src="{{ url_for('static', filename='js/chart-bar-demo.js') }}"></script>
         <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
         <script src="{{ url_for('static', filename='js/datatables-simple-demo.js') }}"></script>
+        <script>var date_count = JSON.parse('{{ date_count | safe }}');
+                // Set new default font family and font color to mimic Bootstrap's default styling
+                Chart.defaults.global.defaultFontFamily = '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
+                Chart.defaults.global.defaultFontColor = '#292b2c';
+
+                var labels = Object.keys(date_count);
+                var data = Object.values(date_count);
+
+                var maxValue = Math.max(...data);
+                var yAxisMax = Math.ceil(maxValue * 1.2);
+
+                // Calculate the maximum value for the y-axis
+                // var yAxisMax = maxValue * 1.2;  // 20% more than the maximum value
+
+
+                // Area Chart Example
+                var ctx = document.getElementById("myAreaChart");
+                var myLineChart = new Chart(ctx, {
+                type: 'line',
+                data: {
+                    labels: labels,
+                    datasets: [{
+                    label: "Sessions",
+                    lineTension: 0.3,
+                    backgroundColor: "rgba(2,117,216,0.2)",
+                    borderColor: "rgba(2,117,216,1)",
+                    pointRadius: 5,
+                    pointBackgroundColor: "rgba(2,117,216,1)",
+                    pointBorderColor: "rgba(255,255,255,0.8)",
+                    pointHoverRadius: 5,
+                    pointHoverBackgroundColor: "rgba(2,117,216,1)",
+                    pointHitRadius: 50,
+                    pointBorderWidth: 2,
+                    data: data,
+                    }],
+                },
+                options: {
+                    scales: {
+                    xAxes: [{
+                        time: {
+                        unit: 'date'
+                        },
+                        gridLines: {
+                        display: false
+                        },
+                        ticks: {
+                        maxTicksLimit: 7
+                        }
+                    }],
+                    yAxes: [{
+                        ticks: {
+                            min: 0,
+                            max: yAxisMax,
+                            maxTicksLimit: 5
+                        },
+                        gridLines: {
+                        color: "rgba(0, 0, 0, .125)",
+                        }
+                    }],
+                    },
+                    legend: {
+                    display: false
+                    }
+                }
+                });
+        </script>
 {% endblock %}
