--- a/static/css/integrations.css
+++ b/static/css/integrations.css
@@ -31,6 +31,10 @@
     width: 30px;
     height: 30px;
 }
+.copy-img:active {
+  transform: scale(0.8);
+  transition: transform 0.1s;
+}
 
 .tooltip {
   display: none;
