--- a/templates/settings.html
+++ b/templates/settings.html
@@ -140,7 +140,8 @@
                     <em><small>Must be no more than 250 characters.</small></em><br><br>
 
                     <label for="custom_prompt">Custom Prompt:</label>
-                    <textarea id="custom_prompt" name="custom_prompt" rows="4" cols="50" maxlength="1000" style="resize: none;">{{ settings['custom_prompt'] }}</textarea>
+                    <textarea id="custom_prompt" name="custom_prompt" rows="4" cols="50" maxlength="1000" style="resize: both;">{{ settings['custom_prompt'] }}</textarea>
+                    <br>
                     <em><small>Must be no more than 1000 characters.</small></em><br><br>
                 </div>
             </div>
