--- a/templates/base.html
+++ b/templates/base.html
@@ -53,18 +53,10 @@
                                 Dashboard
                             </a>
                             <div class="sb-sidenav-menu-heading">Interface</div>
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                            <a class="nav-link" href="{{ url_for('settings', chatbot_id=chatbot_id) }}" id="Dashboard">
                                 <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                                 Settings
-                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
-                            <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
-                                <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="{{ url_for('settings', chatbot_id=chatbot_id) }}">Styling Settings</a>
-                                    <a class="nav-link" href="{{ url_for('settings', chatbot_id=chatbot_id) }}">System Settings</a>
-                                    <a class="nav-link" href="{{ url_for('settings', chatbot_id=chatbot_id) }}">FAQs</a>
-                                </nav>
-                            </div>
                             <a class="nav-link" href="{{ url_for('integrations', chatbot_id=chatbot_id) }}" id="Dashboard">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                                 Integrations
