Added a context processor to pass in global variables such as name of user and reverted API keys back to live ones context processors seem like they could have a lot of good implications

--- a/templates/base.html
+++ b/templates/base.html
@@ -73,8 +73,7 @@
                         </div>
                     </div>
                     <div class="sb-sidenav-footer">
-                        <div class="small">Logged in as:</div>
-                        Chage this to pass in name
+                        <div class="small">Logged in as: {{ name }}</div>
                     </div>
                 </nav>
             </div>
