--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -118,7 +118,7 @@
             <div class="card mb-4">
                 <div class="card-header">
                     <i class="fas fa-chart-pie me-1"></i>
-                    Feedback From Users (like and dislike stuffffff)
+                    Feedback From Users
                 </div>
                 <div class="card-body"><canvas id="myPieChart" width="100%" height="40"></canvas></div>
             </div>
