Improved UI on mobile device screen size

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,9 @@
                         </div>
                         <div class="chatbox-top">{{ settings.chatbot_title }}</div> 
                     </span>
+                    <div class="chatbox-close" id="chatboxCloseButton" style="cursor: pointer;">
+                        <span class="material-icons">close</span>
+                    </div>
                     <!-- will need to write JS to inject close button on mobile -->
                     <!-- <div class="chatbox-close">
                         <img id="close-button" class="close-button" src="{{ url_for('static', filename='images/down-arrow.svg') }}" alt="Close">
