--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6,16 +6,6 @@
             padding: 0;
         }
 
-        /* .widget {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            z-index: 9999;
-            max-width: 100%; 
-            right: 0px; 
-            max-height: 100%;
-        } */
-
         .widget {
             position: fixed;
             top: 0;
@@ -92,19 +82,19 @@
                 margin: 10px 0;
             }
         }
-        /* .chatbot {
-            position: fixed;
-            bottom: 15px;
-            right: 20px;
-            z-index: 9999;
-            width: 350px;
-            height: 600px;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-            animation: slide-up 0.5s ease-out;
-        } */
-        
+
+        /* Hide the close button by default */
+        .chatbox-close {
+            display: none;
+        }
+
+        /* Use a media query to show the close button on screen widths less than 768px */
+        @media (max-width: 480px) {
+            .chatbox-close {
+                display: block;
+            }
+        }
+
         .chatbot {
             width: 100%; /* Adjust based on preference */
             height: 100%; /* Adjust based on preference */
