--- a/templates/settings.html
+++ b/templates/settings.html
@@ -173,6 +173,6 @@
 {% endblock %}
 
 {% block scripts %}
-    <script type="text/javascript" src="https://eccoai-customization-2--t0rfrt.herokuapp.com/{{ user_id }}/{{ chatbot_id }}/popup.js"></script>
+    <script type="text/javascript" src="http://127.0.0.1:5000/{{ user_id }}/{{ chatbot_id }}/popup.js"></script>
     <script src="{{ url_for('static', filename='js/settings.js') }}"></script>
 {% endblock %}
