UI of pop up box

--- a/static/css/analytics.css
+++ b/static/css/analytics.css
@@ -300,3 +300,14 @@ body {
   color: rgb(237, 237, 237);
   font-family: Tahoma;
 }
+#popup_button {
+  display: none;
+}
+.upgrade-button:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px rgba(60, 185, 60, 0.5);
+}
+
+.upgrade-button:hover {
+  background-color: rgb(80, 205, 80);
+}
